# bayarea_airport_parking

./: README.md  fetch_data.py  fetch_data.sh  hello.py  pyproject.toml  uv-to-req.sh
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml  fetch_data.yml
data/: data.csv
dev/: dev.py  scratch.ipynb
docker/: Dockerfile  docker-build.sh  requirements.txt
