[project]
name = "bayarea-airport-parking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "gt>=0.3.15",
    "plotly>=5.24.1",
    "polars>=1.17.1",
    "quarto>=0.1.0",
    "requests>=2.32.3",
    "shiny>=1.2.1",
]
